--- a/public/step3.html
+++ b/public/step3.html
@@ -90,12 +90,18 @@
 					</tr>
 				</thead>
 				<tbody>
- 					<tr>
+					<tr>
+ 						<td>QUESTRADE RUSSELL 1000 EQUAL WEIGHT US TECHNOLOGY INDEX ETF</td>
+ 						<td>0.0375</td>
+ 						<td>25.92</td>
+ 						<td></td>
+ 					</tr>
+ 					<!-- <tr>
  						<td>AMAZON.COM INC</td>
  						<td>0.0125</td>
  						<td>844.14</td>
  						<td></td>
- 					</tr>
+ 					</tr> -->
 					 <tr>
 					 	<td>ISHARES MSCI EMERGING MARKET</td>
 					 	<td>0.15</td>
@@ -108,24 +114,24 @@
 					 	<td>27.39</td>
 					 	<td></td>
 					 </tr>
-					 <tr>
+					 <!-- <tr>
 					 	<td>FACEBOOK INC-A</td>
 					 	<td>0.0125</td>
 					 	<td>133.84</td>
 					 	<td></td>
-					 </tr>
+					 </tr> -->
 					 <tr>
 					 	<td>ALPHABET INC-CL A</td>
 					 	<td>0.0125</td>
 					 	<td>842.17</td>
 					 	<td></td>
 					 </tr>
-					 <tr>
+					 <!-- <tr>
 					 	<td>NETFLIX INC</td>
 					 	<td>0.0125</td>
 					 	<td>142.01</td>
 					 	<td></td>
-					 </tr>
+					 </tr> -->
 					 <tr>
 					 	<td>QUESTRADE RUSSELL US MIDCAP</td>
 					 	<td>0.07</td>
@@ -199,12 +205,18 @@
 					</tr>
 				</thead>
 				<tbody>
-					 <tr>
+					<tr>
+ 						<td>QUESTRADE RUSSELL 1000 EQUAL WEIGHT US TECHNOLOGY INDEX ETF</td>
+ 						<td>0.06</td>
+ 						<td>25.92</td>
+ 						<td></td>
+ 					</tr>
+					 <!-- <tr>
 					 	<td>AMAZON.COM INC</td>
 					 	<td>0.02</td>
 					 	<td>844.14</td>
 					 	<td></td>
-					 </tr>
+					 </tr> -->
 					 <tr>
 					 	<td>ISHARES MSCI EMERGING MARKET</td>
 					 	<td>0.125</td>
@@ -217,24 +229,24 @@
 					 	<td>27.39</td>
 					 	<td></td>
 					 </tr>
-					 <tr>
+					 <!-- <tr>
 					 	<td>FACEBOOK INC-A</td>
 					 	<td>0.02</td>
 					 	<td>133.84</td>
 					 	<td></td>
-					 </tr>
+					 </tr> -->
 					 <tr>
 					 	<td>ALPHABET INC-CL A</td>
 					 	<td>0.02</td>
 					 	<td>842.17</td>
 					 	<td></td>
 					 </tr>
-					 <tr>
+					 <!-- <tr>
 					 	<td>NETFLIX INC</td>
 					 	<td>0.02</td>
 					 	<td>142.01</td>
 					 	<td></td>
-					 </tr>
+					 </tr> -->
 					 <tr>
 					 	<td>QUESTRADE RUSSELL US MIDCAP</td>
 					 	<td>0.1</td>
